syntax = "proto3";

package proto;
option go_package = "../proto";

message loginRequest {
  string UserName = 1;
  string Password = 2;
  string NickName = 3;
}

message loginResponse {
  int32 Ret = 1;
  string Token = 2;
}

message profileRequest {
  string UserName = 1;
  string Password = 2;
  string NickName = 3;
  string FileName = 4;
  string Token = 5;
}

message profileResponse {
  int32 Ret = 1;
  string UserName = 2;
  string NickName = 3;
  string PicName = 4;
}

// pb.go file gen: protoc --go_out=. ./*.proto
